[tool.poetry]
name = "kalman-and-bayesian-filters-in-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
filterpy = "^1.4.5"
jupyter = "^1.0.0"
notebook = "^6.4.10"
sympy = "^1.10.1"
numpy = "^1.22.3"
scipy = "^1.8.0"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
